# Hookage

./: .gitignore  LICENSE  hookage.py
HookLoader/: CMakeLists.txt
HookLoader/include/: Define.h
HookLoader/include/base/: BaseConsole.h  BaseLogger.h  BaseLoggerFactory.h  FileInputStream.h  FileOutputStream.h
HookLoader/include/easyhooks/: EasyHook64.h  EasyHookManager.h
HookLoader/include/export/: HookEntry.h
HookLoader/include/export/config/: ConfigField.hpp
HookLoader/include/export/hooks/: Hook.h  HookException.h  HookManager.h
HookLoader/include/export/io/: Closable.h
HookLoader/include/export/logger/: LogLevel.h
HookLoader/include/impl/: DLLEventImpl.h  LoadEventImpl.h  UnloadEventImpl.h
HookLoader/include/util/: DoubleField.h  DynamicLibrary.h  FileStream.h  LongField.h  Utils.h
HookLoader/include/winapi/: WinConsoleFactory.h
HookLoader/libs/include/: easyhook.h
HookLoader/src/: BaseConfigReader.cpp  BaseConsole.cpp  BaseLogger.cpp  BaseLoggerFactory.cpp  DLLEventImpl.cpp  DoubleField.cpp  DynamicLibrary.cpp  EasyHook64.cpp  EasyHookManager.cpp  FileInputStream.cpp  FileOutputStream.cpp  FileStream.cpp  LoadEventImpl.cpp  LogLevel.cpp  LongField.cpp  UnloadEventImpl.cpp  Utils.cpp  WinConsoleFactory.cpp  libmain.cpp
Launcher/: CMakeLists.txt
Launcher/include/: Define.h  Util.h
Launcher/include/config/: Config.hpp  ConfigField.hpp  ConfigReader.h  ConfigWriter.h
Launcher/include/impl/: BaseConfigReader.h  BaseConfigWriter.h  LongField.h
Launcher/src/: BaseConfigReader.cpp  BaseConfigWriter.cpp  LongField.cpp  Util.cpp  main.cpp
descriptor-generator/: main.py
hook_template/: CMakeLists.txt
hook_template/body/api/: Api.h
hook_template/body/api/config/: ConfigParseException.hpp
hook_template/body/api/events/: LoadEvent.h
hook_template/body/api/io/: InputStream.h
hook_template/body/api/logger/: Logger.h  LoggerFactory.h
release/: hookage.py
release/hook_template/body/api/config/: Config.hpp
release/hook_template/body/api/console/: Console.h  ConsoleFactory.h
release/hook_template/body/api/events/: DLLEvent.h  UnloadEvent.h
release/hook_template/body/api/io/: OutputStream.h
release/hook_template/body/codegen/: descriptor-generator.py
